welcome.lessons.welcome.variables.Variables.scala.error
Variables:8: error: value unary_! is not a member of Int
while(!dejaFait!=nbPas){
      ^